test/expected/ns_+typedef_i-c++14.out
namespace A::B { typedef int Int; }; show user typedef
          ^
11: error: nested namespace declarations are not supported until C++17
